delete coa child
